# rpg_games_data_analysis

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: c0.1-alb-data_description.ipynb  c0.2-alb-feature_engineering(in_progress).ipynb  c0.4-alb-exploratory_analysis(in_progress).ipynb  c1.0-alb-rpg_games_data_analysis.ipynb  main_notebook.ipynb
