[tool.poetry]
name = "rpg-games-data-analysis"
version = "0.1.0"
description = ""
authors = ["Andrey"]
readme = "README.md"
packages = [{include = "rpg_games_data_analysis"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
numpy = "^1.24.3"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
